[0.9.12]
	- Created a config option to force users to use a certian theme.

[0.9.10]
	- Fixed the cron programs, they where out of date in the table structures
	- Added the ["flags"]["nofooter"] . ["flags"]["noappfooter"] flags.
	- Fixed calendars in Printer Friendly mode.
	- Fixed calendar day-view with events spanning multiple hours.
	- Fixed calendar default view.
	- Fixed calendar when editing events and groups associated to them.
	- Fixed lang independence with navbar text.
	- Implemented new Applications class.
	- Changed all API table names to use the phpgw_ prefix.
	- Application permissions on accounts is now done via full ACL
	- You can now turn off cacheing of the phpgw_info array, maybe a small preformance increase
		depending on the setup.
	- phpgw_info is now cached in phpgw_app_sessions instead of phpgw_sessions.session_info
	- The over all structure of the API has changed quite a bit.
	- Files in phpgwapi/inc now have a class. prefix instead of phpgw_
	- Classes are now loaded via createobject()
	- The categories class has been updated and is working better
	- The new contacts class, which will be a central point for all contact data is now in place
	- Cleaned up most of the user/group admin section (including templates, code re-write, and small bug fixes)
	- Added partial API support for anonymous sessions
	- Fix PostgreSQL error for explicit cast from int to varchar in todo/index.php
	- Re-created a few icons for the verdilak layout. Apparently, they where bad .gif files
	  which where casuing problems.
	- Added new layout - Thanks to IDSociety
	- Global and user level categories, some apps have started using it
	- Fixed todo list dates, they where being created completly wrong
	- Added better error checking for the todo list

[0.9.9pl1]
	- Added some error checking to see if there header and/or database table where created.

[0.9.9] - Fixed a number of issues with the verdilak layout