@@ -1,5 +1,7 @@
 [0.9.12]
 	- Created a config option to force users to use a certian theme.
+	- Fixed nextmatchs on the categories preferences screen
+	- Added new config class so developers can centralize there configs
 
 [0.9.10]
 	- Fixed the cron programs, they where out of date in the table structures
